--- a/離群值比較V2.ipynb
+++ b/離群值比較V2.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "e93a21c2-5c23-4f0a-87b4-2deb8a8d99ef",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a1c72209-b975-46aa-ad4e-19387bb2278c",
    "metadata": {},
    "outputs": [],
@@ -392,12 +392,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "aca80955-e013-4498-a45f-aca2255c7911",
    "metadata": {},
    "outputs": [],
    "source": [
-    "noise_rows.to_csv('CalculatedData/離群比較/原始27_V2.csv', index=False)"
+    "# noise_rows.to_csv('CalculatedData/離群比較/原始27_V2.csv', index=False)"
    ]
   },
   {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "a4b2b7e6-a088-4e73-8b5f-90fdf3746702",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "2f3c985d-fc51-4344-919e-16ebe35076e0",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "3458caeb-0186-45b0-ba57-fe6f148a4099",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "b6603855-a0f2-4392-ab20-0765449408ad",
    "metadata": {},
    "outputs": [],
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "e1d0df87-3069-4a51-ad1e-2411af69ba04",
    "metadata": {},
    "outputs": [
@@ -633,59 +633,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "f7aa7953-7e64-4808-a8a4-4bcdf385cec3",
+   "execution_count": 25,
+   "id": "fe096246-93d4-4f7e-a867-b5412bde09d5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0    人與車\n",
-       "1    人與車\n",
-       "2    人與車\n",
-       "Name: 事故類型及型態大類別名稱, dtype: object"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "乾燥    3\n",
+      "Name: 路面狀況-路面狀態名稱, dtype: int64\n",
+      "乾燥    6\n",
+      "濕潤    1\n",
+      "Name: 路面狀況-路面狀態名稱, dtype: int64\n",
+      "男    3\n",
+      "Name: 當事者屬-性-別名稱, dtype: int64\n",
+      "男    7\n",
+      "Name: 當事者屬-性-別名稱, dtype: int64\n",
+      "3.0    2\n",
+      "2.0    1\n",
+      "Name: 當事者事故發生時年齡, dtype: int64\n",
+      "3.0    3\n",
+      "4.0    2\n",
+      "2.0    1\n",
+      "1.0    1\n",
+      "Name: 當事者事故發生時年齡, dtype: int64\n",
+      "其他    2\n",
+      "汽車    1\n",
+      "Name: 車輛撞擊部位大類別名稱-最初, dtype: int64\n",
+      "其他        3\n",
+      "機車與自行車    2\n",
+      "汽車        2\n",
+      "Name: 車輛撞擊部位大類別名稱-最初, dtype: int64\n",
+      "無照明    3\n",
+      "Name: 光線名稱, dtype: int64\n",
+      "有照明且開啟       4\n",
+      "有照明未開啟或故障    3\n",
+      "Name: 光線名稱, dtype: int64\n",
+      "國道    3\n",
+      "Name: 道路類別-第1當事者-名稱, dtype: int64\n",
+      "省道    5\n",
+      "鄉道    1\n",
+      "國道    1\n",
+      "Name: 道路類別-第1當事者-名稱, dtype: int64\n",
+      "1    3\n",
+      "Name: 速限-第1當事者, dtype: int64\n",
+      "1    6\n",
+      "0    1\n",
+      "Name: 速限-第1當事者, dtype: int64\n",
+      "單路部分    3\n",
+      "Name: 道路型態大類別名稱, dtype: int64\n",
+      "單路部分    4\n",
+      "交岔路     3\n",
+      "Name: 道路型態大類別名稱, dtype: int64\n",
+      "路段    3\n",
+      "Name: 事故位置大類別名稱, dtype: int64\n",
+      "路段      4\n",
+      "交叉路口    3\n",
+      "Name: 事故位置大類別名稱, dtype: int64\n",
+      "無號誌    3\n",
+      "Name: 號誌-號誌種類名稱, dtype: int64\n",
+      "無號誌       4\n",
+      "閃光號誌      2\n",
+      "行車管制號誌    1\n",
+      "Name: 號誌-號誌種類名稱, dtype: int64\n",
+      "中央分向島    3\n",
+      "Name: 車道劃分設施-分向設施大類別名稱, dtype: int64\n",
+      "中央分向島    5\n",
+      "無        2\n",
+      "Name: 車道劃分設施-分向設施大類別名稱, dtype: int64\n",
+      "車道線(附標記)    3\n",
+      "Name: 車道劃分設施-分道設施-快車道或一般車道間名稱, dtype: int64\n",
+      "車道線(附標記)        2\n",
+      "車道線(無標記)        2\n",
+      "未繪設車道線          2\n",
+      "禁止變換車道線(附標記)    1\n",
+      "Name: 車道劃分設施-分道設施-快車道或一般車道間名稱, dtype: int64\n",
+      "未繪設快慢車道分隔線    3\n",
+      "Name: 車道劃分設施-分道設施-快慢車道間名稱, dtype: int64\n",
+      "快慢車道分隔線              3\n",
+      "未繪設快慢車道分隔線           3\n",
+      "寬式快慢車道分隔島(50公分以上)    1\n",
+      "Name: 車道劃分設施-分道設施-快慢車道間名稱, dtype: int64\n",
+      "有    3\n",
+      "Name: 車道劃分設施-分道設施-路面邊線名稱, dtype: int64\n",
+      "有    5\n",
+      "無    2\n",
+      "Name: 車道劃分設施-分道設施-路面邊線名稱, dtype: int64\n",
+      "人與車    3\n",
+      "Name: 事故類型及型態大類別名稱, dtype: int64\n",
+      "人與車     4\n",
+      "車與車     2\n",
+      "車輛本身    1\n",
+      "Name: 事故類型及型態大類別名稱, dtype: int64\n",
+      "路肩、路緣    2\n",
+      "快車道      1\n",
+      "Name: 事故位置子類別名稱, dtype: int64\n",
+      "快車道      3\n",
+      "交叉路口內    3\n",
+      "慢車道      1\n",
+      "Name: 事故位置子類別名稱, dtype: int64\n",
+      "在路上作業中    1\n",
+      "其他        1\n",
+      "穿越道路中     1\n",
+      "Name: 事故類型及型態子類別名稱, dtype: int64\n",
+      "穿越道路中    3\n",
+      "追撞       2\n",
+      "其他       1\n",
+      "撞電桿      1\n",
+      "Name: 事故類型及型態子類別名稱, dtype: int64\n",
+      "其他           1\n",
+      "向前直行中        1\n",
+      "等待(引擎未熄火)    1\n",
+      "Name: 當事者行動狀態子類別名稱, dtype: int64\n",
+      "向前直行中    4\n",
+      "步行       2\n",
+      "其他       1\n",
+      "Name: 當事者行動狀態子類別名稱, dtype: int64\n",
+      "非汽、機及自行車    1\n",
+      "右側車身        1\n",
+      "無撞擊         1\n",
+      "Name: 車輛撞擊部位子類別名稱-最初, dtype: int64\n",
+      "非汽、機及自行車    3\n",
+      "前車頭         3\n",
+      "右前車頭(身)     1\n",
+      "Name: 車輛撞擊部位子類別名稱-最初, dtype: int64\n",
+      "在道路上工作之人員未設適當標識    1\n",
+      "恍神、緊張、心不在焉分心駕駛     1\n",
+      "尚未發現肇事因素           1\n",
+      "Name: 肇因研判子類別名稱-個別, dtype: int64\n",
+      "未依規定減速            2\n",
+      "未依標誌或標線穿越道路       2\n",
+      "其他引起事故之疏失或行為      1\n",
+      "未保持行車安全距離         1\n",
+      "恍神、緊張、心不在焉分心駕駛    1\n",
+      "Name: 肇因研判子類別名稱-個別, dtype: int64\n",
+      "其他人    1\n",
+      "營業用    1\n",
+      "計程車    1\n",
+      "Name: 當事者區分-類別-子類別名稱-車種, dtype: int64\n",
+      "行人      3\n",
+      "普通重型    2\n",
+      "營業用     1\n",
+      "自用      1\n",
+      "Name: 當事者區分-類別-子類別名稱-車種, dtype: int64\n",
+      "繫安全帶(使用幼童安全椅)     2\n",
+      "其他(無需使用保護裝備之人)    1\n",
+      "Name: 保護裝備名稱, dtype: int64\n",
+      "其他(無需使用保護裝備之人)    3\n",
+      "戴非半罩式安全帽          1\n",
+      "不明                1\n",
+      "繫安全帶(使用幼童安全椅)     1\n",
+      "戴半罩式安全帽           1\n",
+      "Name: 保護裝備名稱, dtype: int64\n",
+      "未使用     2\n",
+      "非駕駛人    1\n",
+      "Name: 行動電話或電腦或其他相類功能裝置名稱, dtype: int64\n",
+      "非駕駛人    3\n",
+      "未使用     3\n",
+      "不明      1\n",
+      "Name: 行動電話或電腦或其他相類功能裝置名稱, dtype: int64\n",
+      "車的狀態    2\n",
+      "人的狀態    1\n",
+      "Name: 當事者行動狀態大類別名稱, dtype: int64\n",
+      "車的狀態    4\n",
+      "人的狀態    3\n",
+      "Name: 當事者行動狀態大類別名稱, dtype: int64\n",
+      "Series([], Name: 車輛撞擊部位大類別名稱-其他, dtype: int64)\n",
+      "Series([], Name: 車輛撞擊部位大類別名稱-其他, dtype: int64)\n",
+      "非駕駛者          1\n",
+      "駕駛者           1\n",
+      "無(車輛駕駛者因素)    1\n",
+      "Name: 肇因研判大類別名稱-個別, dtype: int64\n",
+      "駕駛者     4\n",
+      "非駕駛者    3\n",
+      "Name: 肇因研判大類別名稱-個別, dtype: int64\n",
+      "否    3\n",
+      "Name: 肇事逃逸類別名稱-是否肇逃, dtype: int64\n",
+      "否    7\n",
+      "Name: 肇事逃逸類別名稱-是否肇逃, dtype: int64\n",
+      "無號誌    3\n",
+      "Name: 號誌-號誌動作名稱, dtype: int64\n",
+      "無號誌    4\n",
+      "正常     3\n",
+      "Name: 號誌-號誌動作名稱, dtype: int64\n",
+      "1    3\n",
+      "Name: 死亡, dtype: int64\n",
+      "1    7\n",
+      "Name: 死亡, dtype: int64\n",
+      "0    3\n",
+      "Name: 受傷, dtype: int64\n",
+      "0    4\n",
+      "1    2\n",
+      "2    1\n",
+      "Name: 受傷, dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "overlapping_rows['事故類型及型態大類別名稱']"
+    "for i in overlapping_rows.columns:\n",
+    "    print(overlapping_rows[i].value_counts())\n",
+    "    print(non_overlapping_rows_mapper[i].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "8a2804f9-4654-4739-bf2f-cd72087d6fc8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      人與車\n",
-       "1      車與車\n",
-       "2      車與車\n",
-       "71     人與車\n",
-       "73    車輛本身\n",
-       "74     人與車\n",
-       "77     人與車\n",
-       "Name: 事故類型及型態大類別名稱, dtype: object"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "non_overlapping_rows_mapper['事故類型及型態大類別名稱']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "fabdced5-ad03-496d-8b48-232ef390c107",
    "metadata": {},
    "outputs": [
