--- a/道路V2.ipynb
+++ b/道路V2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f86ea7dc-6799-42a5-8e84-aa0f6422f5f9",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "00a8edb3-600c-4782-ad38-55d0c5fcf445",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "a55ceb49-6238-4d71-b524-8b21abe7da4b",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
        "4           -0.916000      1.800087  1.826145  0.205783  14.069323 -2.803115  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,6 +254,27 @@
     "X1 = full_dist.drop(['受傷', '死亡', '經度', '緯度'], axis=1).to_numpy()\n",
     "\n",
     "full_dist.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "38587906-e3ce-4449-b38c-038af4c51d53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(167918, 51)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist_dfA2[1].shape"
    ]
   },
   {
@@ -346,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "94276c2d-c9c8-4ab1-8aca-15533a004ea6",
    "metadata": {},
    "outputs": [
@@ -552,7 +573,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "db92e887-d74c-43ac-9f5c-e72b066bdc97",
    "metadata": {},
    "outputs": [],
@@ -652,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "03afc0b6-e649-43c7-9805-d2a709913430",
    "metadata": {},
    "outputs": [],
@@ -687,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "eeaebfc3-9ae4-4b1c-bd58-f97e868a8837",
    "metadata": {},
    "outputs": [],
@@ -752,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "4e1b7d8f-059a-48cc-83db-f9be90f7fe7f",
    "metadata": {},
    "outputs": [
@@ -776,7 +797,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2712,7 +2733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "0783da52-2c60-42c9-bb9b-089c7bb9efb2",
    "metadata": {},
    "outputs": [],
@@ -2732,32 +2753,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "a83bc835-ef04-444a-a7b1-6c2ab0fada68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "路面狀況-路面狀態名稱 \n",
+      "      車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "乾燥  0.892225  0.826728  0.875213\n",
+      "濕潤  0.105329  0.171985  0.123653\n",
+      "泥濘  0.001108  0.000429  0.000284\n",
+      "油滑  0.001032  0.000429  0.000284\n",
+      "冰雪  0.000306  0.000429  0.000567\n",
+      "當事者屬-性-別名稱 \n",
+      "               車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "男            0.625683  0.633281  0.769427\n",
+      "女            0.363694  0.352554  0.219512\n",
+      "肇事逃逸尚未查獲     0.006349  0.014165  0.008225\n",
+      "無或物(動物、堆置物)  0.004261  0.000000  0.002836\n",
+      "無人駕駛自動車      0.000013  0.000000  0.000000\n",
+      "當事者事故發生時年齡 \n",
+      "     車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "3  0.290146  0.324460  0.294067\n",
+      "1  0.276128  0.189640  0.271711\n",
+      "2  0.256518  0.233381  0.324735\n",
+      "4  0.148812  0.190072  0.098882\n",
+      "0  0.028395  0.062446  0.010605\n",
+      "車輛撞擊部位大類別名稱-最初 \n",
+      "          車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "機車與自行車  0.579265  0.358220  0.231100\n",
+      "汽車      0.341826  0.347782  0.724800\n",
+      "其他      0.078908  0.293998  0.044101\n",
+      "光線名稱 \n",
+      "             車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "有照明未開啟或故障  0.430513  0.371298  0.422575\n",
+      "有照明且開啟     0.328005  0.394048  0.294101\n",
+      "無照明        0.241482  0.234654  0.283324\n",
+      "道路類別-第1當事者-名稱 \n",
+      "          車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "市區道路    0.799894  0.803548  0.300057\n",
+      "村里道路    0.104705  0.093003  0.090471\n",
+      "其他      0.032473  0.047789  0.049348\n",
+      "縣道      0.024875  0.021748  0.031197\n",
+      "省道      0.017412  0.013593  0.138117\n",
+      "鄉道      0.016380  0.015310  0.007374\n",
+      "專用道路    0.002726  0.003148  0.004821\n",
+      "國道      0.001318  0.001860  0.347703\n",
+      "快速(公)道  0.000217  0.000000  0.030913\n",
+      "道路型態大類別名稱 \n",
+      "        車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "交岔路   0.611723  0.475748  0.317640\n",
+      "單路部分  0.379399  0.505938  0.677822\n",
+      "圓環廣場  0.005280  0.012305  0.001134\n",
+      "其他    0.003566  0.006009  0.003403\n",
+      "平交道   0.000032  0.000000  0.000000\n",
+      "事故位置大類別名稱 \n",
+      "        車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "交叉路口  0.581282  0.371727  0.288996\n",
+      "路段    0.407312  0.504936  0.687181\n",
+      "其他    0.009706  0.122621  0.010210\n",
+      "交流道   0.001700  0.000715  0.013613\n",
+      "號誌-號誌種類名稱 \n",
+      "                    車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "無號誌               0.583281  0.655315  0.683210\n",
+      "行車管制號誌            0.266364  0.174417  0.262904\n",
+      "行車管制號誌(附設行人專用號誌)  0.098942  0.122764  0.028361\n",
+      "閃光號誌              0.051413  0.047503  0.025525\n",
+      "車道劃分設施-分向設施大類別名稱 \n",
+      "           車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "無        0.359351  0.297324  0.159104\n",
+      "雙向禁止超車線  0.295519  0.392188  0.035167\n",
+      "中央分向島    0.193400  0.110889  0.760635\n",
+      "行車分向線    0.145540  0.190585  0.039989\n",
+      "單向禁止超車線  0.006190  0.009014  0.005105\n",
+      "車道劃分設施-分道設施-快車道或一般車道間名稱 \n",
+      "                車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "未繪設車道線        0.582256  0.599800  0.138684\n",
+      "車道線(無標記)      0.307103  0.304478  0.350255\n",
+      "車道線(附標記)      0.061979  0.061239  0.452070\n",
+      "禁止變換車道線(無標記)  0.036301  0.024038  0.028644\n",
+      "禁止變換車道線(附標記)  0.012361  0.010445  0.030346\n",
+      "車道劃分設施-分道設施-快慢車道間名稱 \n",
+      "                     車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "未繪設快慢車道分隔線         0.808530  0.843039  0.688315\n",
+      "快慢車道分隔線            0.164079  0.144799  0.273965\n",
+      "寬式快慢車道分隔島(50公分以上)  0.021080  0.010016  0.029779\n",
+      "窄式快慢車道分隔島(無柵欄)     0.004796  0.002003  0.006807\n",
+      "窄式快慢車道分隔島(附柵欄)     0.001516  0.000143  0.001134\n",
+      "車道劃分設施-分道設施-路面邊線名稱 \n",
+      "     車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "有  0.536129  0.599084  0.883437\n",
+      "無  0.463871  0.400916  0.116563\n",
+      "事故類型及型態大類別名稱 \n",
+      "        車與車、低速線  人與車、低速限   車與車、高速限\n",
+      "車與車   0.886379      0.0  0.828985\n",
+      "車輛本身  0.113596      0.0  0.171015\n",
+      "人與車   0.000025      1.0  0.000000\n",
+      "保護裝備名稱 \n",
+      "                         車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "戴半罩式安全帽                0.328540  0.198403  0.126183\n",
+      "繫安全帶(使用幼童安全椅)          0.291778  0.306386  0.654431\n",
+      "戴非半罩式安全帽               0.199555  0.113208  0.094064\n",
+      "不明                     0.155178  0.137881  0.112131\n",
+      "未戴安全帽或未繫安全帶(未使用幼童安全椅)  0.012977  0.007983  0.010611\n",
+      "其他(無需使用保護裝備之人)         0.011973  0.236139  0.002581\n",
+      "行動電話或電腦或其他相類功能裝置名稱 \n",
+      "                車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "未使用           0.838031  0.629753  0.875538\n",
+      "不明            0.159021  0.137736  0.118440\n",
+      "使用手持或有礙駕駛安全   0.002137  0.001742  0.004588\n",
+      "使用免持或未有礙駕駛安全  0.000740  0.000581  0.001434\n",
+      "非駕駛人          0.000071  0.230189  0.000000\n",
+      "當事者行動狀態大類別名稱 \n",
+      "        車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "車的狀態  0.995434  0.767391  0.994274\n",
+      "不明    0.004495  0.006087  0.005726\n",
+      "人的狀態  0.000071  0.226522  0.000000\n",
+      "車輛撞擊部位大類別名稱-其他 \n",
+      "          車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "機車與自行車  0.600160  0.415712  0.163522\n",
+      "汽車      0.321312  0.337152  0.789308\n",
+      "其他      0.078528  0.247136  0.047170\n",
+      "肇因研判大類別名稱-個別 \n",
+      "               車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "駕駛者          0.793083  0.547595  0.786992\n",
+      "其他           0.140901  0.160768  0.153934\n",
+      "無(車輛駕駛者因素)   0.053443  0.056045  0.037773\n",
+      "機件           0.003050  0.001444  0.012496\n",
+      "燈光           0.002756  0.000433  0.001136\n",
+      "裝載           0.002366  0.004333  0.004828\n",
+      "無(物或動物)      0.002117  0.000000  0.002272\n",
+      "無(非車輛駕駛人因素)  0.001963  0.006789  0.000568\n",
+      "交通管制(設施)     0.000198  0.000000  0.000000\n",
+      "非駕駛者         0.000122  0.222591  0.000000\n",
+      "肇事逃逸類別名稱-是否肇逃 \n",
+      "     車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "否  0.983404  0.964086  0.977879\n",
+      "是  0.016596  0.035914  0.022121\n",
+      "路面狀況-路面鋪裝名稱 \n",
+      "        車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "柏油    0.990740  0.979682  0.995179\n",
+      "水泥    0.003834  0.006868  0.003971\n",
+      "其他鋪裝  0.002770  0.011160  0.000567\n",
+      "無鋪裝   0.002363  0.001860  0.000284\n",
+      "碎石    0.000293  0.000429  0.000000\n",
+      "道路障礙-障礙物名稱 \n",
+      "            車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "無障礙物      0.983588  0.978108  0.975893\n",
+      "路上有停車     0.006279  0.009873  0.002269\n",
+      "其他障礙物     0.004891  0.004006  0.010777\n",
+      "道路工事(程)中  0.004675  0.005580  0.010777\n",
+      "攤位、棚架     0.000382  0.002146  0.000000\n",
+      "有堆積物      0.000185  0.000286  0.000284\n",
+      "死亡 \n",
+      "     車與車、低速線   人與車、低速限   車與車、高速限\n",
+      "0  0.996211  0.987552  0.979013\n",
+      "1  0.003713  0.012305  0.019285\n",
+      "2  0.000076  0.000143  0.001418\n",
+      "3  0.000000  0.000000  0.000284\n"
+     ]
+    }
+   ],
    "source": [
     "table_lst = [\n",
-    "    # '路面狀況-路面狀態名稱',\n",
-    "    # '當事者屬-性-別名稱', \n",
-    "    # '當事者事故發生時年齡', \n",
-    "    # '車輛撞擊部位大類別名稱-最初',\n",
-    "    # '光線名稱',\n",
-    "    # '道路類別-第1當事者-名稱',1\n",
-    "    # '道路型態大類別名稱',\n",
-    "    # '事故位置大類別名稱',1\n",
-    "    # '號誌-號誌種類名稱',\n",
-    "    # '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
-    "    # '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱',\n",
-    "    # '事故類型及型態大類別名稱',\n",
-    "    # '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', \n",
-    "    # '當事者行動狀態大類別名稱',\n",
-    "    # '車輛撞擊部位大類別名稱-其他', \n",
-    "    # '肇因研判大類別名稱-個別', \n",
-    "    # '肇事逃逸類別名稱-是否肇逃',\n",
-    "    # '路面狀況-路面鋪裝名稱', \n",
-    "    # '道路障礙-障礙物名稱',\n",
-    "    # '死亡'1\n",
+    "    '路面狀況-路面狀態名稱',\n",
+    "    '當事者屬-性-別名稱', \n",
+    "    '當事者事故發生時年齡', \n",
+    "    '車輛撞擊部位大類別名稱-最初',\n",
+    "    '光線名稱',\n",
+    "    '道路類別-第1當事者-名稱',\n",
+    "    '道路型態大類別名稱',\n",
+    "    '事故位置大類別名稱',\n",
+    "    '號誌-號誌種類名稱',\n",
+    "    '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
+    "    '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱',\n",
+    "    '事故類型及型態大類別名稱',\n",
+    "    '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', \n",
+    "    '當事者行動狀態大類別名稱',\n",
+    "    '車輛撞擊部位大類別名稱-其他', \n",
+    "    '肇因研判大類別名稱-個別', \n",
+    "    '肇事逃逸類別名稱-是否肇逃',\n",
+    "    '路面狀況-路面鋪裝名稱', \n",
+    "    '道路障礙-障礙物名稱',\n",
+    "    '死亡'\n",
     "]\n",
     "for i in table_lst:\n",
     "    result = table(i, full_0, full_1, full_2)\n",
