--- a/Version2/link_outlier_v2.ipynb
+++ b/Version2/link_outlier_v2.ipynb
@@ -7,6 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
+    "current_dir_path = os.getcwd()\n",
+    "current_file_path = os.path.abspath(current_dir_path)\n",
+    "current_dir_path = os.path.dirname(current_file_path)\n",
+    "parent_dir_path = os.path.dirname(current_dir_path)\n",
+    "\n",
+    "os.chdir(current_dir_path)\n",
+    "\n",
     "import pickle\n",
     "import time\n",
     "import pandas as pd\n",
