--- a/Version2/離群值比較_V2.ipynb
+++ b/Version2/離群值比較_V2.ipynb
@@ -7,6 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
+    "current_dir_path = os.getcwd()\n",
+    "current_file_path = os.path.abspath(current_dir_path)\n",
+    "current_dir_path = os.path.dirname(current_file_path)\n",
+    "parent_dir_path = os.path.dirname(current_dir_path)\n",
+    "\n",
+    "os.chdir(current_dir_path)\n",
+    "\n",
     "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -281,7 +290,6 @@
     "# List of columns to select\n",
     "select_lst = [\n",
     "    '路面狀況-路面狀態名稱',\n",
-    "    # '肇因研判大類別名稱-主要', # 降低預測值\n",
     "    '當事者屬-性-別名稱', '當事者事故發生時年齡', \n",
     "    '車輛撞擊部位大類別名稱-最初',\n",
     "    '光線名稱',\n",
@@ -295,14 +303,11 @@
     "    '事故類型及型態大類別名稱',\n",
     "    '事故位置子類別名稱', '事故類型及型態子類別名稱', \n",
     "    '當事者行動狀態子類別名稱', '車輛撞擊部位子類別名稱-最初', '肇因研判子類別名稱-個別',\n",
-    "    # '當事者區分-類別-大類別名稱-車種', # 降低預測值\n",
     "    '當事者區分-類別-子類別名稱-車種',\n",
     "    '保護裝備名稱', '行動電話或電腦或其他相類功能裝置名稱', \n",
     "    '當事者行動狀態大類別名稱',\n",
     "    '車輛撞擊部位大類別名稱-其他', '肇因研判大類別名稱-個別', '肇事逃逸類別名稱-是否肇逃',\n",
     "    '號誌-號誌動作名稱',\n",
-    "    # '路面狀況-路面鋪裝名稱', '道路障礙-視距名稱', '車道劃分設施-分向設施子類別名稱', '車道劃分設施-分道設施-快慢車道間名稱', '車輛撞擊部位大類別名稱-其他',\n",
-    "    # '道路障礙-障礙物名稱', '道路型態子類別名稱', '路面狀況-路面缺陷名稱', '天候名稱', '車輛撞擊部位子類別名稱-其他',\n",
     "    '死亡受傷人數',\n",
     "    '經度', '緯度',\n",
     "]\n",
@@ -336,16 +341,12 @@
     "select_lst_new = [\n",
     "    '光線名稱',\n",
     "    '道路類別-第1當事者-名稱',\n",
-    "    '速限-第1當事者', #'道路障礙-視距品質名稱', # 和速限共線\n",
-    "    '道路型態大類別名稱', '事故位置大類別名稱', \n",
-    "    # '路面狀況-路面鋪裝名稱', '路面狀況-路面缺陷名稱', '道路障礙-障礙物名稱', # 分類幾乎都是無缺陷\n",
+    "    '速限-第1當事者',\n",
+    "    '道路型態大類別名稱', '事故位置大類別名稱',\n",
     "    '號誌-號誌種類名稱',\n",
     "    '車道劃分設施-分向設施大類別名稱', '車道劃分設施-分道設施-快車道或一般車道間名稱',\n",
     "    '車道劃分設施-分道設施-快慢車道間名稱', '車道劃分設施-分道設施-路面邊線名稱',\n",
     "    '事故類型及型態大類別名稱',\n",
-    "    # '死亡受傷人數',\n",
-    "    # '經度', '緯度',\n",
-    "    # '死亡', '受傷'\n",
     "]\n",
     "\n",
     "start_time = time.time()\n",
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a4b2b7e6-a088-4e73-8b5f-90fdf3746702",
    "metadata": {},
    "outputs": [
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2f3c985d-fc51-4344-919e-16ebe35076e0",
    "metadata": {},
    "outputs": [
